- read in data, mask, uncert


*****  Sat Aug 19 20:19:37 CEST 2017  *****

Let's make puppies work.
puppies must work from the command line or from an interactive session:

## Interactive:
import puppies as p

# New puppy:
pup = p.init("cfile.cfg")

# New step:
pup.badpix()
pup.center()

# Load:
pup = p.io.load(path + "wa043b.p")

## Command line:
  TBD

On now puppy, take the location of the config file as the root where
to place the outputs.

*****

repository structure (so far):
puppies
|--puppies
|  |--tools
|  |--stats
|  |--lib
|  |--image
|  `--io
|--examples
|--inputs
|--src_c
|--modules
`--docs

*****

Got a basic package import working, and interactive init() running.
Added required files.
Need to find a solution for all_spitzer.vec (file too large),
download during 'make'?


*****  Sun Aug 20 22:26:40 CEST 2017  *****

Moved getpar() from spitzer.py to tools.

*****

Got badpix working.
Added pup_badpix.py and stats module.


*****  Sun Sep  3 20:09:46 CEST 2017  *****

Implemented disk routine for Python and C.

*****

Implemented imedit.py, tied together with disk.py into image
module.


*****  Sun Sep 24 18:51:34 CEST 2017  *****

Implemented gaussian functions into center module.
TBD: give them their own submodule inside the center module.


*****  Mon Sep 25 23:09:32 CEST 2017  *****

Implemented least-asymetry routines into center module.


*****  Tue Sep 26 21:01:11 CEST 2017  *****

Cleaned up the disk.py and cdisk.c functions.


*****  Sun Oct  1 15:04:01 CEST 2017  *****

Sorted up gaussian, made it its own module inside the center module.

*****

Implemented center-of-light calculation into center module.

*****

Implemented center driver.py routine.


*****  Sun Oct  8 22:55:49 CEST 2017  *****

Got pup_center running (yay!).
Added temporary calling sequence to pup_center.
Fixed minor bug in center/driver.py for least-asym calls.
Tweaked main driver (removed parse() def).
Put user-input dict (from config files) into pup.inputs.

*****
