@@ -7,6 +7,7 @@
 #include <sys/types.h>
 
 #include "ind.h"
+#include "cdisk.h"
 
 /* Function's doc string */
 PyDoc_STRVAR(disk__doc__,
@@ -27,14 +28,14 @@ Returns                                                              \n\
 disk: 2D bool ndarray                                                \n\
    Disk image.                                                       \n\
 status: Integer                                                      \n\
-   Flag with 1/0 if any part of the disk lies outside/inside of the  \n\
+   Flag with 1/0 if any/none part of the disk lies outside of the    \n\
    image boundaries.                                                 \n\
 ndisk: Integer                                                       \n\
    Number of pixels inside the disk.                                 \n\
                                                                      \n\
 Examples                                                             \n\
 --------                                                             \n\
->>> import cdisk as d                                                \n\
+>>> import disk as d                                                 \n\
 >>> disk, s, n = d.disk(3.5, np.array([4.0,6.0]), np.array([8,8]))   \n\
 >>> print(disk)                                                      \n\
 >>> print(s, n)");
@@ -44,41 +45,28 @@ static PyObject *disk(PyObject *self, PyObject *args){
   double radius;
   PyArrayObject *d, *center, *size;
   npy_intp dims[2];
-  int i, j, ny, nx, status=0, ndisk, n=0;
-  double yctr, xctr;
+  int status, ndisk;
 
   if (!PyArg_ParseTuple(args, "dOO", &radius, &center, &size))
       return NULL;
 
-  ny = dims[0] = INDi(size,0);
-  nx = dims[1] = INDi(size,1);
+  /* Allocate output array: */
+  dims[0] = INDi(size,0);
+  dims[1] = INDi(size,1);
   d = (PyArrayObject *) PyArray_SimpleNew(2, dims, NPY_BOOL);
-
-  yctr = INDd(center,0);
-  xctr = INDd(center,1);
-  /* Alert if the center lies outside the image:                           */
-  if ( (yctr-radius) < 0 || (yctr+radius) > (ny-1) ||
-       (xctr-radius) < 0 || (xctr+radius) > (nx-1) )
-    status = 1;
-
-  for   (i=0; i<ny; i++)
-    for (j=0; j<nx; j++){
-      /* Is the point disk[i][j] inside the disk?                          */
-      IND2b(d,i,j) = (i-yctr)*(i-yctr) + (j-xctr)*(j-xctr) <= radius*radius;
-      n += IND2b(d,i,j);
-    }
-  /* Number of pixels within radius in ndisk:                              */
-  ndisk = n;
+  /* Compute disk mask:     */
+  cdisk(d, radius, INDd(center,0), INDd(center,1), dims[0], dims[1],
+        &status, &ndisk);
 
   return Py_BuildValue("Nii", d, status, ndisk);
 }
 
 
 /* Module's doc string */
-PyDoc_STRVAR(cdisk__doc__, "Circular disk image.");
+PyDoc_STRVAR(diskmod__doc__, "Circular disk image.");
 
 
-static PyMethodDef cdisk_methods[] = {
+static PyMethodDef disk_methods[] = {
     {"disk", disk, METH_VARARGS, disk__doc__},
     {NULL,   NULL, 0,            NULL}
 };
@@ -86,12 +74,12 @@ static PyMethodDef cdisk_methods[] = {
 #if PY_MAJOR_VERSION >= 3
 /* Module definition for Python 3.                                          */
 static struct PyModuleDef moduledef = {
-  PyModuleDef_HEAD_INIT, "cdisk", cdisk__doc__, -1, cdisk_methods
+  PyModuleDef_HEAD_INIT, "disk", diskmod__doc__, -1, disk_methods
 };
 
 /* When Python 3 imports a C module named 'X' it loads the module           */
 /* then looks for a method named "PyInit_"+X and calls it.                  */
-PyObject *PyInit_cdisk (void) {
+PyObject *PyInit_disk (void) {
   PyObject *module = PyModule_Create(&moduledef);
   import_array();
   return module;
@@ -100,8 +88,8 @@ PyObject *PyInit_cdisk (void) {
 #else
 /* When Python 2 imports a C module named 'X' it loads the module           */
 /* then looks for a method named "init"+X and calls it.                     */
-void initcdisk(void){
-  Py_InitModule3("cdisk", cdisk_methods, cdisk__doc__);
+void initdisk(void){
+  Py_InitModule3("disk", disk_methods, diskmod__doc__);
   import_array();
 }
 #endif
